// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do.js - {"breakBeforeStatement":"always"} format 1`] = `
====================================options=====================================
breakBeforeStatement: "always"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
do if (true) break
while (true)

do { if (true) { break } } while (true)

do console.log("test")
while (true)

=====================================output=====================================
do
  if (true)
    break;
while (true);

do {
  if (true) {
    break;
  }
} while (true);

do
  console.log("test");
while (true);

================================================================================
`;

exports[`do.js - {"breakBeforeStatement":"loops"} format 1`] = `
====================================options=====================================
breakBeforeStatement: "loops"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
do if (true) break
while (true)

do { if (true) { break } } while (true)

do console.log("test")
while (true)

=====================================output=====================================
do
  if (true) break;
while (true);

do {
  if (true) {
    break;
  }
} while (true);

do
  console.log("test");
while (true);

================================================================================
`;
